--- a/views/list_products.ejs
+++ b/views/list_products.ejs
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de produtos</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <style>
+        .active-button {
+            background-color: green;
+            /* Ou a cor de fundo desejada */
+            color: white;
+        }
+
+        .action-buttons {
+            display: flex;
+            gap: 5px;
+            /* Ajuste o espaçamento entre os botões conforme necessário */
+        }
+
+        .action-buttons a {
+            flex: 0 1 auto;
+            /* Permite que os botões ocupem o espaço necessário */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="container col-5">
+
+        <nav class="navbar bg-body-tertiary">
+            <form class="container-fluid justify-content-start">
+                <a class="text-decoration-none text-reset" href="/add_product/"><button id="add-list-btn"
+                        class="btn btn-outline-success me-2" type="button">Add
+                        Product</button></a>
+                <a class="text-decoration-none text-reset" href="/products/"><button id="product-list-btn"
+                        class="btn btn-outline-success me-2" type="button">Product
+                        list</button></a>
+            </form>
+        </nav>
+
+        <table class="table table-striped table-bordered table-hover table-responsive">
+            <colgroup>
+                <col style="width: 50%;">
+                <col style="width: 20%;">
+                <col style="width: 20%;">
+                <col style="width: 10%;">
+            </colgroup>
+
+            <thead class="table-light">
+                <tr>
+                    <th>Name</th>
+                    <th>Qty</th>
+                    <th>Price</th>
+                    <th>Actions</th>
+                </tr>
+            <tbody>
+
+                <% products.forEach(product=> { %>
+
+                    <tr>
+                        <td>
+                            <%= product.nome %>
+                        </td>
+                        <td>
+                            <%= product.quantity %>
+                        </td>
+                        <td>
+                            <%= product.price %>
+                        </td>
+                        <td class="action-buttons">
+                            <a href="/edit_product/<%= product.id %>" class="btn btn-warning btn-sm">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                    <path
+                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                    <path fill-rule="evenodd"
+                                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                                </svg></a>
+                            <a href="/delete_product/<%= product.id %>" class="btn btn-danger btn-sm">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-x-lg" viewBox="0 0 16 16">
+                                    <path
+                                        d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+
+                    <% }) %>
+
+            </tbody>
+            </thead>
+        </table>
+
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Obtenha a URL atual
+            const currentUrl = window.location.pathname;
+
+            // Verifique a URL e adicione a classe 'active-button' ao botão correspondente
+            if (currentUrl.includes("/add_product")) {
+                document.getElementById("add-product-btn").classList.add("active-button");
+            } else if (currentUrl.includes("/products")) {
+                document.getElementById("product-list-btn").classList.add("active-button");
+            }
+        });
+    </script>
 </body>
+
 </html>
