--- a/views/list_products.ejs
+++ b/views/list_products.ejs
@@ -45,14 +45,16 @@
 
         <table class="table table-striped table-bordered table-hover table-responsive">
             <colgroup>
+                <col style="width: 10%;">
                 <col style="width: 50%;">
-                <col style="width: 20%;">
+                <col style="width: 10%;">
                 <col style="width: 20%;">
                 <col style="width: 10%;">
             </colgroup>
 
             <thead class="table-light">
                 <tr>
+                    <th>ID</th>
                     <th>Name</th>
                     <th>Qty</th>
                     <th>Price</th>
@@ -64,13 +66,16 @@
 
                     <tr>
                         <td>
+                            <%= product.id %>
+                        </td>
+                        <td>
                             <%= product.nome %>
                         </td>
                         <td>
                             <%= product.quantity %>
                         </td>
                         <td>
-                            <%= product.price %>
+                            R$ <%= product.price %>
                         </td>
                         <td class="action-buttons">
                             <a href="/edit_product/<%= product.id %>" class="btn btn-warning btn-sm">
